// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationWithBe5Menu 1`] = `
<div>
  <div>
    <div
      className="s-alert-wrapper"
    />
  </div>
  <nav
    className="navbar navbar-expand-md navbar-dark bg-dark"
  >
    <div
      className="container"
    >
      <button
        className="navbar-toggler"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse"
        style={Object {}}
      >
        <ul
          className="navbar-nav"
        >
          <li
            className="dropdown nav-item"
            onKeyDown={[Function]}
          >
            <a
              aria-expanded={false}
              aria-haspopup={true}
              className="dropdown-toggle nav-link"
              href="#"
              onClick={[Function]}
            >
              Test table
            </a>
            <div
              aria-hidden={true}
              className="dropdown-menu"
              role="menu"
              tabIndex="-1"
            >
              <a
                className="dropdown-item"
                href="#!table/testtable/Test 1D"
                onClick={[Function]}
                tabIndex="0"
                type={undefined}
              >
                Test 1D
              </a>
              <a
                className="dropdown-item"
                href="#!table/testtable/Test 1D unknown"
                onClick={[Function]}
                tabIndex="0"
                type={undefined}
              >
                Test 1D unknown
              </a>
            </div>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="#!table/users/All records"
              onClick={[Function]}
            >
              Пользователи
            </a>
          </li>
          <li
            className="nav-item"
          >
            <a
              className="nav-link"
              href="#!logout"
              onClick={[Function]}
            >
              Выход
            </a>
          </li>
        </ul>
        <form
          className="form-inline ml-auto"
        >
          <a
            className="btn btn-secondary"
            href="#!logout"
            role="button"
          >
            Logout
          </a>
        </form>
      </div>
    </div>
  </nav>
  <div
    className="container"
  >
    <div
      className="row"
    />
  </div>
</div>
`;

exports[`Be5Menu 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark"
>
  <div
    className="container"
  >
    <button
      className="navbar-toggler"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      className="collapse navbar-collapse"
      style={Object {}}
    >
      <ul
        className="navbar-nav"
      >
        <li
          className="dropdown nav-item"
          onKeyDown={[Function]}
        >
          <a
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle nav-link"
            href="#"
            onClick={[Function]}
          >
            Test table
          </a>
          <div
            aria-hidden={true}
            className="dropdown-menu"
            role="menu"
            tabIndex="-1"
          >
            <a
              className="dropdown-item"
              href="#!table/testtable/Test 1D"
              onClick={[Function]}
              tabIndex="0"
              type={undefined}
            >
              Test 1D
            </a>
            <a
              className="dropdown-item"
              href="#!table/testtable/Test 1D unknown"
              onClick={[Function]}
              tabIndex="0"
              type={undefined}
            >
              Test 1D unknown
            </a>
          </div>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="#!table/users/All records"
            onClick={[Function]}
          >
            Пользователи
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="#!logout"
            onClick={[Function]}
          >
            Выход
          </a>
        </li>
      </ul>
      <form
        className="form-inline ml-auto"
      >
        <a
          className="btn btn-secondary"
          href="#!logout"
          role="button"
        >
          Logout
        </a>
      </form>
    </div>
  </div>
</nav>
`;

exports[`Be5MenuItem 1`] = `
<a
  className="menu-item"
  href="#!table/testtable/Test 1D"
  target=""
>
  Test 1D
</a>
`;
